--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
 
 <body>
     <div class="insta">
-        <a href=""><img src="./img/Active-Instagram-3-icon.png" alt=""></a>
+        <a target="blank" href="https://www.instagram.com/pets.alpha/">
+            <img src="./img/Active-Instagram-3-icon.png" alt="">
+        </a>
+    </div>
+
+    <div class="whatsapp">
+        <a target="blank" href="https://api.whatsapp.com/send/?phone=98984705414&text&app_absent=0">
+            <img width="50px" src="./icon/streamline-icon-whatsapp@150x150.PNG" alt="">
+        </a>
     </div>
 
     <header>
@@ -29,10 +37,13 @@
             <ul class="menu">
                 <a class="link_menu" href="#">
                     <li class="li_menu">Início</li>
-                </a><a class="link_menu" href="#servicos">
+                </a><a class="link_menu" href="#title_inicio_container">
                     <li class="li_menu">Serviços</li>
-                </a><a class="link_menu" href="">
+                </a><a class="link_menu" href="#section_form">
                     <li class="li_menu">Contato</li>
+                </a>
+                </a><a class="link_menu" href="#footer">
+                    <li class="li_menu">Criador</li>
                 </a>
             </ul>
         </nav>
@@ -42,71 +53,111 @@
             <div class="txt_head">
                 <h1 class="title_head1">SALÃO DA MARI</h1>
                 <h4 class="sub_title_head">TENHA CABELOS LINDOS</h4>
-                <a class="btn_head">QUERO MUDAR O VISUAL</a>
+                <a target="blank" class="btn_head" href="https://www.instagram.com/marielle_sil/">QUERO MUDAR O
+                    VISUAL</a>
             </div>
         </section>
 
         <div class="container">
-            <div id="servicos"></div>
-            <section class="title_inicio_container">
+            <section id="title_inicio_container">
                 <h1>Os melhores cortes da cidade!</h1>
                 <p>CONFIRA OS NOSSOS COMBOS</p>
             </section>
-
+            <hr>
             <section class="cortes">
 
                 <section class="tipos_cortes">
                     <img class="img_corte" src="./img/mulher-cortando-cabelo.jpg" alt="">
-                    <p>Corte 1</p>
-                    <p class="p_corte">super barato</p>
-                    <a class="btn_corte" href="">FAZER PEDIDO</a>
+                    <table class="table_cortes">
+                        <tr>
+                            <th>Corte 01</th>
+                        </tr>
+                        <tr>
+                            <td>Caro</td>
+                        </tr>
+                        <tr>
+                            <td class="btn_corte">
+                                <a target="blank" class="btn_corte"
+                                    href="https://api.whatsapp.com/send/?phone=98984705414&text&app_absent=0">FAZER
+                                    PEDIDO</a>
+                            </td>
+                        </tr>
+                    </table>
                 </section>
 
                 <section class="tipos_cortes">
                     <img class="img_corte" src="./img/mulher-mostrando-tesoura.jpg" alt="">
-                    <p>Corte 2</p>
-                    <p class="p_corte">Preço médio</p>
-                    <a class="btn_corte" href="">FAZER PEDIDO</a>
+                    <table class="table_cortes">
+                        <tr>
+                            <th>Corte 02</th>
+                        </tr>
+                        <tr>
+                            <td>Médio</td>
+                        </tr>
+                        <tr>
+                            <td class="btn_corte">
+                                <a target="blank" class="btn_corte"
+                                    href="https://api.whatsapp.com/send/?phone=98984705414&text&app_absent=0">FAZER
+                                    PEDIDO</a>
+                            </td>
+                        </tr>
+                    </table>
                 </section>
 
                 <section class="tipos_cortes">
                     <img class="img_corte" src="./img/mulher-sorrindo.jpg" alt="">
-                    <p>Corte 3</p>
-                    <p class="p_corte">Super luxuoso</p>
-                    <a class="btn_corte" href="">FAZER PEDIDO</a>
+                    <table class="table_cortes">
+                        <tr>
+                            <th>Corte 03</th>
+                        </tr>
+                        <tr>
+                            <td>Mais simples</td>
+                        </tr>
+                        <tr>
+                            <td class="btn_corte">
+                                <a target="blank" class="btn_corte"
+                                    href="https://api.whatsapp.com/send/?phone=98984705414&text&app_absent=0">FAZER
+                                    PEDIDO</a>
+                            </td>
+                        </tr>
+                    </table>
                 </section>
             </section>
-            <br>
-            <hr>
-            <BR></BR>
-            <section class="cortes">
 
-                <section class="tipos_cortes">
-                    <img class="img_corte" src="./img/mulher-cortando-cabelo.jpg" alt="">
-                    <p>Corte 1</p>
-                    <p class="p_corte">super barato</p>
-                    <a class="btn_corte" href="">FAZER PEDIDO</a>
-                </section>
+            <section id="section_form">
 
-                <section class="tipos_cortes">
-                    <img class="img_corte" src="./img/mulher-mostrando-tesoura.jpg" alt="">
-                    <p>Corte 2</p>
-                    <p class="p_corte">Preço médio</p>
-                    <a class="btn_corte" href="">FAZER PEDIDO</a>
-                </section>
+                <h2 style="font-family: sans-serif; text-align: center;">Mande suas informações e opiniões</h2>
+                <br>
+                <form class="form"
+                action="https://gmail.us20.list-manage.com/subscribe/post?u=327e3cf0d8080e53776a70a9b&amp;id=8e49fcd258" 
+                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" 
+                class="validate" target="_blank" novalidate>
 
-                <section class="tipos_cortes">
-                    <img class="img_corte" src="./img/mulher-sorrindo.jpg" alt="">
-                    <p>Corte 3</p>
-                    <p class="p_corte">Super luxuoso</p>
-                    <a class="btn_corte" href="">FAZER PEDIDO</a>
-                </section>
+                    <input type="text" name="FNAME" id="name" placeholder="Nome">
+                    
+                    <input type="email" name="EMAIL" id="email" placeholder="Gmail">
+                    <textarea name="TEXTAREA" id="" cols="30" rows="10"></textarea>
+                    <select name="PLACE">
+                        <optgroup class="form_optgroup">
+                            <option selected disabled>Escolha uma opção</option>
+                            <option value="corte01">Corte 01</option>
+                            <option value="corte02">Corte 02</option>
+                            <option value="corte03">Corte 03</option>
+                        </optgroup>
+                    </select>
+
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_327e3cf0d8080e53776a70a9b_8e49fcd258" tabindex="-1" value=""></div>
+
+                    <input type="submit" value="ENVIAR">
+                </form>
             </section>
         </div>
     </main>
 
-    <footer>
-        <p>Helysson de Oliveira Medeiros</p>
+    <footer id="footer">
+        <h4>Criado por</h4>
+        <h3> &copy;Helysson </h3>
     </footer>
 </body>
 
