redução de imagens

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <body>
     <div class="insta">
         <a target="blank" href="https://www.instagram.com/pets.alpha/">
-            <img src="./img/Active-Instagram-3-icon.png" alt="">
+            <img src="./img/Active-Instagram-3-icon-reduzido.png" alt="">
         </a>
     </div>
 
     <div class="whatsapp">
         <a target="blank" href="https://api.whatsapp.com/send/?phone=98984705414&text&app_absent=0">
-            <img width="50px" src="./icon/streamline-icon-whatsapp@150x150.PNG" alt="">
+            <img width="50px" src="./img/streamline-icon-whatsapp@150x150-reduzido.png" alt="">
         </a>
     </div>
 
@@ -67,7 +67,7 @@
             <section class="cortes">
 
                 <section class="tipos_cortes">
-                    <img class="img_corte" src="./img/mulher-cortando-cabelo.jpg" alt="">
+                    <img class="img_corte" src="./img/mulher-cortando-cabelo-reduzido.jpg" alt="">
                     <table class="table_cortes">
                         <tr>
                             <th>Corte 01</th>
@@ -78,15 +78,15 @@
                         <tr>
                             <td class="btn_corte">
                                 <a target="blank" class="btn_corte"
-                                    href="https://api.whatsapp.com/send/?phone=98984705414&text&app_absent=0">FAZER
-                                    PEDIDO</a>
+                                    href="https://api.whatsapp.com/send/?phone=98984705414&text&app_absent=0">
+                                    FAZER PEDIDO</a>
                             </td>
                         </tr>
                     </table>
                 </section>
 
                 <section class="tipos_cortes">
-                    <img class="img_corte" src="./img/mulher-mostrando-tesoura.jpg" alt="">
+                    <img class="img_corte" src="./img/mulher-mostrando-tesoura-reduzido.jpg" alt="">
                     <table class="table_cortes">
                         <tr>
                             <th>Corte 02</th>
@@ -97,15 +97,15 @@
                         <tr>
                             <td class="btn_corte">
                                 <a target="blank" class="btn_corte"
-                                    href="https://api.whatsapp.com/send/?phone=98984705414&text&app_absent=0">FAZER
-                                    PEDIDO</a>
+                                    href="https://api.whatsapp.com/send/?phone=98984705414&text&app_absent=0">
+                                    FAZER PEDIDO</a>
                             </td>
                         </tr>
                     </table>
                 </section>
 
                 <section class="tipos_cortes">
-                    <img class="img_corte" src="./img/mulher-sorrindo.jpg" alt="">
+                    <img class="img_corte" src="./img/mulher-sorrindo-reduzido.jpg" alt="">
                     <table class="table_cortes">
                         <tr>
                             <th>Corte 03</th>
@@ -116,8 +116,8 @@
                         <tr>
                             <td class="btn_corte">
                                 <a target="blank" class="btn_corte"
-                                    href="https://api.whatsapp.com/send/?phone=98984705414&text&app_absent=0">FAZER
-                                    PEDIDO</a>
+                                    href="https://api.whatsapp.com/send/?phone=98984705414&text&app_absent=0">
+                                    FAZER PEDIDO</a>
                             </td>
                         </tr>
                     </table>
